# snowplow

./: .env  Caddyfile  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: config.py  models.py
backend/: Dockerfile
backend/app/: config.py  main.py  snowflake.py
frontend/: Caddyfile  Dockerfile  Dockerfile.caddy
frontend/src/: App.css  App.jsx
frontend/src/components/: Header.jsx  Main.jsx
